; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_console.c_EnableExtraHardware.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_console.c_EnableExtraHardware.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENABLE_MOUSE_INPUT = common dso_local global i32 0, align 4
@MousePresent = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @EnableExtraHardware to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EnableExtraHardware(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @GetConsoleMode(i32 %5, i32* %4)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @ENABLE_MOUSE_INPUT, align 4
  %10 = load i32, i32* %4, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @SetConsoleMode(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i64 @GetConsoleMode(i32, i32*) #1

declare dso_local i32 @SetConsoleMode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
